--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">"
-  
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+        #input-city {
+            max-width: 150px
+        }
+    </style>
+
 </head>
 
 <body>
@@ -17,20 +23,82 @@
         <h1 class="text-center">Weather Dashboard</h1>
 
     </nav>
-<section class="">
-    <div class="row">
-        <div class="col-2">
-            <div class="d-flex flex-col">
-                
+
+    <section class="">
+        <div class="row">
+            <div class="col-2">
+
+                <!-- sidebar -->
+                <div class="d-flex flex-colmn">
+                    <label for="input-city">Search for a City:</label>
+                    <input id="input-city" type="text" placeholder="Enter City">
+
+                </div>
+
+                <!-- history -->
+                <div>
+                    <ul>
+                        <li>Melbourne</li>
+                        <li>Perth</li>
+                        <li>Sydney</li>
+                    </ul>
+                </div>
             </div>
 
+            <!-- weather info -->
+            <div class="col-10">
+
+                <div class="row">
+                    <!-- Todays weather -->
+                    <div class="col-12">
+
+                        <!-- weather API endpoint and responses -->
+                        <!-- https://openweathermap.org/current#name -->
+
+                        <!-- Will need to call whe API, and also use the One call API to convert lon and lat -->
+
+                        <!-- city name -->
+                        <!-- Icons for weather: https://openweathermap.org/weather-conditions -->
+
+                        <!-- Wind speed -->
+
+                        <!-- humidity -->
+
+                        <!-- temperature: may need to convert kelvins to celcius -->
+
+                        <!-- uv index -->
+
+
+                    </div>
+                </div>
+
+
+                <div class="row"></div>
+                <!-- 5 day forecast -->
+                <div class="col">Day 1 Sunny forecast</div>
+                <div class="col">Day 2 Sunny forecast</div>
+                <div class="col">Day 3 Sunny forecast</div>
+                <div class="col">Day 4 Sunny forecast</div>
+                <div class="col">Day 5 Sunny forecast</div>
+
+            </div>
         </div>
+    </section>
 
-    </div>
-</section>
 
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
     <script src="jquery-3.6.0.min.js"></script>
+    <script src="./assets/JS/script.js"></script>
 </body>
 
 </html>
