--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="https://jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/JS/script.js"></script>
 </body>
 
